# wur2

./: .env  Cargo.toml  README.md
ex/: executor.rs
migrations/migrations/: 20251221052529_init.sql
src/: #main.rs#  auth.rs  db.rs  executor.rs  main.rs  messages.rs  models.rs  server.rs  users.rs
ui/: app-window.slint  main.rs
