[package]
name = "wur2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono"
] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
